# plugin-cpp-example

./: .howmake  CMakeLists.txt  CMakePresets.json  README.md
include/: core.h  main.h
sdk/: bot.cpp  command.cpp
sdk/include/: bot.h  bus.h  command.h  head.h  luo9_sdk.h  message.h  pattern.h  payload.h  version.h
sdk/lib/windows/: luo9_core.lib  luo9_sdk_cpp.lib
sdk/luo9_sdk/: luo9_sdk.sln
sdk/luo9_sdk/luo9_sdk_cpp/: luo9_sdk_cpp.vcxproj  luo9_sdk_cpp.vcxproj.filters
sdk/src/: bot.cpp  bus.cpp  command.cpp  payload.cpp
src/: core.cpp  main.cpp
